# Eagle-CLI

./: .gitignore  CHANGELOG.md  EAGLE.md  README.ko.md  README.md  RELEASING.md  TEST.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
cli_anything/eagle/: __init__.py  __main__.py  eagle_cli.py
cli_anything/eagle/assets/companion-plugin/: README.md  index.html  manifest.json  plugin.js
cli_anything/eagle/core/: bridge.py  client.py  config.py  files.py  selection.py  state.py  storage.py
cli_anything/eagle/utils/: folders.py  library.py  output.py  repl.py
companion-plugin/: README.md  index.html  manifest.json  plugin.js
tests/: test_cli.py  test_client.py  test_utils.py
